--- a/una-main.css
+++ b/una-main.css
@@ -8,7 +8,7 @@ Description: One Page WordPress starter theme with no posts, archives, comments 
 Version: 1.0.3
 License: GPLv2 or later 
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: una
+Text Domain: index
 Tags: one-column
 */
 @import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,700i");
