--- a/una-main.css
+++ b/una-main.css
@@ -64,7 +64,7 @@ body { background-color: #faf3ea; }
 
 .temp .intro a { font-weight: 700; font-style: none; color: #452813; text-decoration: none; border-bottom: 1px dotted #452813; }
 
-.temp .instructions { font-family: "Helvetica Neue", Arial, Sans-Serif; font-weight: 300; font-size: 24px; line-height: 28px; color: #603e26; }
+.temp .instructions { font-family: "Playfair Display", Iowan, Sans-Serif; font-weight: 300; font-size: 24px; line-height: 28px; color: #603e26; }
 
 .temp .instructions a { font-style: none; color: #452813; text-decoration: none; border-bottom: 1px dotted #452813; }
 
