--- a/css/una-page.css
+++ b/css/una-page.css
@@ -56,7 +56,7 @@ img.aligncenter { clear: both; display: block; margin-right: auto; margin-left: 
 
 body { background-color: #faf3ea; }
 
-.temp { width: 640px; max-width: 80%; margin: 120px auto 40px auto; font-family: "Playfair Display", Georgia, Serif; font-size: 36px; line-height: 42px; }
+.temp { width: 90%; max-width: 90%; margin: 40px auto 40px auto; font-family: "Playfair Display", Georgia, Sans-Serif; font-size: 36px; line-height: 42px; }
 
 @media (max-width: 800px) { .temp { margin: 40px auto 20px auto; font-size: 24px; line-height: 28px; } }
 
@@ -64,7 +64,7 @@ body { background-color: #faf3ea; }
 
 .temp .intro a { font-weight: 700; font-style: none; color: #452813; text-decoration: none; border-bottom: 1px dotted #452813; }
 
-.temp .instructions { font-family: "Playfair Display", Georgia, Sans-Serif; font-weight: 300; font-size: 24px; line-height: 28px; color: #603e26; }
+.temp .instructions { font-family: "Playfair Display", Georgia, Sans-Serif; font-weight: 300; font-size: 24px; line-height: 35px; color: #603e26; }
 
 .temp .instructions a { font-style: none; color: #452813; text-decoration: none; border-bottom: 1px dotted #452813; }
 
@@ -75,3 +75,5 @@ body { background-color: #faf3ea; }
 .temp .instructions ul li { list-style-type: none; padding: 0 0 10px 0; }
 
 .temp .instructions ul li:before { content: "§"; padding-right: 20px; }
+
+p { margin: 0; text-indent: 4ch; }
