--- a/css/una-page.css
+++ b/css/una-page.css
@@ -11,7 +11,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: una
 Tags: one-column
 */
-@import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,700i");
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700i");
 html { color: #000; }
 
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, p, blockquote, th, td { margin: 0; padding: 0; }
@@ -83,13 +83,20 @@ p { margin: 0; text-indent: 4ch; }
 .navbar a {
   float: left;
   display: block;
-  color: #603e26;
+  color: #a38972;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  background: #faf5f2;
 }
 
-.navbar a:hover {
-  background: #f5ebe4;
+.navbar a:hover { 
+  color: #452813;
 }
+
+ hr {
+  border-top: 1px dashed #603e26;
+}
+
+.annotation { color: #a38972; font-style: italic; font-size: 18px; }
+
+.author { font-size: 18px; }
