--- a/una-main.css
+++ b/una-main.css
@@ -11,7 +11,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: index
 Tags: one-column
 */
-@import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,700i");
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700i");
 html { color: #000; }
 
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, p, blockquote, th, td { margin: 0; padding: 0; }
